--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eugene Loy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async-prompt": "^1.0.1",
+    "commander": "^4.0.1",
+    "puppeteer": "^2.0.0"
+  }
 }
