--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async-prompt": "^1.0.1",
+    "async-retry": "^1.2.3",
     "commander": "^4.0.1",
     "puppeteer": "^2.0.0"
   }
