--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
   "name": "edx-archive",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple tool to download edX course pages (including excercises with answers, course materials, errata, etc).",
+  "keywords": [
+    "edx",
+    "mooc",
+    "download",
+    "downloader",
+    "pdf",
+    "png",
+    "cli",
+    "tool"
+  ],
   "main": "index.js",
+  "bin": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "homepage": "https://github.com/EugeneLoy/edx-archive",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/EugeneLoy/edx-archive.git"
   },
   "author": "Eugene Loy",
   "license": "ISC",
